--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0"
